<resources>
        <string name="app_name">蘑菇骑行</string>
        <string name="btn_yes">是</string>
    	<string name="btn_no">否</string>
    	<string name="btn_sure">确定</string>
    	<string name="btn_save">保存</string>
    	<string name="btn_bind">绑定</string>
    	<string name="btn_ignore">忽略</string>
    	<string name="btn_unbind">取消绑定</string>
    	<string name="btn_takephone">拍照</string>
    	<string name="btn_localphone">相册</string>
    	<string name="btn_drop">放弃</string>
    	<string name="btn_cancel">取消</string>
    	<string name="btn_del">删除</string>
    	<string name="btn_back">返回</string>
    	<string name="btn_refresh">刷新</string>
    	<string name="btn_devicesel">终端选择</string>
    	<string name="btn_selectall">选择全部</string>
    	<string name="btn_cancel_select">取消全部</string>
        <string name="sending_request">正在发送请求...</string>
        <string name="request_data">正在获取数据...</string>
        <string name="request_data_fail">获取数据失败...</string>
        <string name="set_data_success">设置数据成功...</string>
        <string name="set_data_fail">设置数据失败...</string>
        <string name="analyze_data_fail">解析数据失败...</string>
        <string name="bottom_text">Copyright@2011-2015 www.360lbs.net</string>
        <string name="navtitle_location">实时跟踪</string>
        <string name="navtitle_safe">GPS防盗</string>
        <string name="navtitle_newrun">新的骑行</string>
        <string name="navtitle_runrecord">历史记录</string>
        <string name="navtitle_warning">告警选项</string>
        <string name="navtitle_info">消息</string>
     	<string name="navtitle_setting">设置</string>
 		<string name="follow_text_follow">重新跟踪</string>
     	<string name="safe_text_title">GPS防盗</string>
     	<string name="safe_text_switch">防盗开关</string>
     	<string name="safe_text_set">范围设定</string>
     	<string name="safe_text_save">保存</string>
     	<string name="safe_text_location">定位当前位置</string>
     	<string name="safe_text_noarea">当前无防盗围栏 </string>
     	<string name="safe_text_areasuccess">获取围栏成功</string>
     	<string name="safe_text_areaerror">围栏显示失败</string>
     	<string name="map_text_nodistance">无法计算距离</string>
     	<string name="map_text_noself">未获取到位置信息</string>
     	<string name="map_text_searchbike">正在追踪</string>
     	<string name="newbike_text_title">新的骑行</string>
     	<string name="newbike_text_start">开始</string>
        <string name="newbike_text_upload">上传</string>
     	<string name="newbike_text_startyet">已开始</string>
     	<string name="newbike_text_pause">暂停</string>
     	<string name="newbike_text_stop">停止</string>
     	<string name="newbike_text_stopyet">已停止</string>
     	<string name="newbike_text_timeinterval">时长</string>
     	<string name="newbike_text_curspeed">当前速度(km/h)</string>
     	<string name="newbike_text_distance">距离(km)</string>
     	<string name="newbike_text_hightspeed">最高速度(km/h)</string>
     	<string name="newbike_text_averagespeed">平均速度(km/h)</string>
     	<string name="newbike_text_cal">卡路里</string>
     	<string name="newbike_text_height">海拔</string>
     	<string name="newbike_text_status_run">骑行记录中...</string>
     	<string name="newbike_text_status_pause">骑行暂停中...</string>
     	<string name="newbike_text_status_stop">未开始骑行...</string>
     	<string name="newbike_btn_complete">结束骑行</string>
     	<string name="newbike_btn_drop">放弃骑行</string>
     	<string name="newbike_btn_continue">继续骑行</string>
     	<string name="newbike_btn_upload">立即上传</string>
     	<string name="newbike_btn_dropupload">放弃上传</string>
     	<string name="bikerecord_text_title">历史记录</string>
     	<string name="bikerecord_text_noRecord">当前无骑行轨迹</string>
        <string name="bikerecord_text_getRecordFail">获取骑行轨迹失败</string>
        <string name="bikerecord_text_del">删除轨迹</string>
        <string name="bind_text_account">账号</string>
        <string name="bind_text_pwd">密码</string>
        <string name="bind_text_changepwd">修改密码</string>
        <string name="maprecord_text_timeinterval">时长</string>
        <string name="maprecord_text_distance">公里数</string>
        <string name="maprecord_text_speed">平均速度 </string>
        <string name="maprecord_nomessage">您还没有任何历史记录</string>
        <string name="toask_input_account">请输入账号</string>
        <string name="toask_input_password">请输入密码</string>
        <string name="toask_input_email">请输入邮箱</string>
        <string name="toask_input_username">请输入用户名</string>
        <string name="toask_input_phone">请输入手机号码</string>
        <string name="toask_error_email">邮箱格式不正确，请重新输入</string>
        <string name="toask_login_success">登陆成功</string>
        <string name="toask_login_fail">登陆失败</string>
        <string name="toask_register_success">注册成功</string>
        <string name="toask_register_fail">注册失败</string>
        <string name="toask_name_not_null">姓名不能为空</string>
        <string name="toask_pwd_not_null">密码不能为空</string>
        <string name="toask_newpwd_not_equal">新密码不一致</string>
        <string name="toask_email_not_null">邮箱不能为空</string>
        <string name="toask_phone_not_null">手机号码不能为空</string>
        <string name="toask_birthday_not_null">生日不能为空</string>
        <string name="toask_clockname_not_null">闹钟名称不能为空</string>
        <string name="toask_error_phone">手机号码格式不正确，请重新输入</string>
        <string name="toask_error_birthday">生日格式不正确，请重新设置</string>
        <string name="toask_error_time">开始时间必须小于结束时间</string>
        <string name="toask_error_guard_time">关注时间不能有重复</string>
        <string name="toask_error_number">请输入正确的数字</string>
        <string name="toask_request_success">请求发送成功</string>
        <string name="toask_request_fail">请求失败</string>
        <string name="toask_tip_unbind">未绑定设备，请先绑定设备</string>
        <string name="toask_tip_unable_shutdown">终端不在线，不能进行关机</string>
        <string name="toask_tip_unable_listener">终端不在线，不能进行监听</string>
        <string name="toask_tip_unable_setting">终端不在线，不能进行设置</string>
        <string name="toask_tip_bind_success">绑定设备成功</string>
        <string name="toask_tip_bind_fail">绑定设备失败</string>
        <string name="toask_tip_unbind_success">解除绑定成功</string>
        <string name="toask_tip_unbind_fail">解除绑定失败</string>
        <string name="toask_tip_unable_distance">当前无法比较距离</string>
        <string name="toask_tip_unable_focus">当前无位置信息</string>
        <string name="toask_tip_del_fail">删除消息失败</string>
        <string name="toask_tip_msg_success">删除消息成功</string>
        <string name="toask_tip_no_msg_del">无消息可删除</string>
        <string name="toask_device_not_line">当前设备离线，不能设置</string>
        <string name="toask_setArea_success">设置防盗成功</string>
        <string name="toask_delArea_success">取消防盗成功</string>
        <string name="toask_saveRecord_success">保存成功</string>
        <string name="toask_saveRecord_fail">保存本地失败</string>
        <string name="toask_unsave_record">未能形成有效的骑行记录</string>
        <string name="toask_invalid_record">无效的骑行记录</string>
        <string name="toask_unbind_bike">未绑定蘑菇伴侣,无法追踪</string>
        <string name="toask_query_database_fail">查询数据库失败</string>
        <string name="toask_no_new_version">暂无新的版本</string>
        <string name="toask_bind_device">请先绑定设备</string>
        <string name="popwindow_title_bind">绑定设备账号</string>
        <string name="popwindow_title_listener">设备监听</string>
        <string name="popwindow_title_sex">性别选择</string>
        <string name="popwindow_title_date">日期选择</string>
        <string name="popwindow_text_account">账号：</string>
        <string name="popwindow_text_pwd">密码：</string>
        <string name="popwindow_text_localphone">回拨号码：</string>
        <string name="dialog_title_exitFollow">是否退出跟踪</string>
        <string name="dialog_msg_exitFollow">您确定要退出跟踪吗?</string>
        <string name="dialog_title_exitRun">骑行中</string>
        <string name="dialog_msg_exitRun">你还在骑行中，是否结束本次骑行?</string>
        <string name="dialog_title_uploadrecord">轨迹上传</string>
        <string name="dialog_msg_uploadrecord">你的骑行记录还未上传，是否立即上传?)</string>
        <string name="dialog_title_saveRun">是否保存当前骑行</string>
        <string name="dialog_msg_saveRun">是否保存当前骑行?</string>
        <string name="dialog_title_invalidrecord">骑行记录</string>
        <string name="dialog_msg_sinvalidrecord">未形成有效的骑行记录</string>
        <string name="dialog_title_warnphone">未输入手机号码</string>
        <string name="dialog_msg_warnphone">请输入有效的手机号码\n保持短信告警功能正常</string>
        <string name="dialog_title_exit">是否退出蘑菇兄弟</string>
        <string name="dialog_msg_exit">您确定要离开蘑菇兄弟吗?</string>
        <string name="dialog_title_logoff">是否退出当前账号</string>
        <string name="dialog_msg_logoff">您确定要注销当前账号吗?</string>
        <string name="dialog_title_unbind">解绑设备</string>
        <string name="dialog_msg_message">您确定要解绑该设备吗?</string>
        <string name="dialog_title_gogps">打开GPS</string>
        <string name="dialog_msg_gogps">检测到您未开启GPS定位，是否前去打开？</string>
        <string name="dialog_title_bind">未绑定蘑菇伴侣</string>
        <string name="dialog_msg_bind">实时跟踪和GPS防盗系统功能将在绑定蘑菇伴侣后生效</string>
        <string name="dialog_title_getphone">设置头像</string>
        <string name="dialog_msg_getphone">设置头像并上传</string>
        <string name="dialog_title_version_update">版本升级</string>
        <string name="dialog_msg_version_update">是否立即升级 ？</string>
        <string name="login_hint_account">输入云友号码</string>
        <string name="login_hint_password">输入密码</string>
        <string name="login_btn_login">登 录</string>
        <string name="login_checkbox_save_password">记住密码</string>
        <string name="login_tv_forget_password">找回密码</string>
        <string name="login_tv_register">注册新用户</string>
        <string name="login_sending">正在登陆...</string>
        <string name="register_text_register">注册账号</string>
        <string name="register_btn_register">注 册</string>
        <string name="register_text_email"> 邮 箱:</string>
        <string name="register_text_username">用户名:</string>
        <string name="register_text_password"> 密 码:</string>
        <string name="register_text_phone">手机号:</string>
        <string name="register_hint_email">方便找回密码</string>
        <string name="register_hint_username">输入用户名</string>
        <string name="register_hint_password">输入密码</string>
        <string name="register_hint_phone">输入手机号</string>
        <string name="register_tip">提示 \n填写邮箱方便您找回密码及了解更多关于KaleTn</string>
        <string name="main_tab_text_pos">位置</string>
        <string name="main_tab_text_friend">云友</string>
        <string name="main_tab_text_msg">消息</string>
        <string name="main_tab_text_setting">设置</string>
        <string name="position_text_title">位置</string>
        <string name="position_menu_distance">距离</string>
        <string name="position_menu_listener">回拨监听</string>
        <string name="position_menu_history">历史轨迹</string>
        <string name="position_menu_pen">围栏签到</string>
        <string name="position_menu_deviceset">终端设置</string>
        <string name="position_menu_shutdown">关机</string>
        <string name="friend_text_title">云 友</string>
        <string name="friend_title_unbind">解除绑定</string>
        <string name="friend_msg_unbind">是否解除绑定？</string>
        <string name="friend_msg_dev_cant_unbind">当前终端不能解绑</string>
        <string name="warn_text_tip">友情提示：短信告警需要填写个人手机号码</string>
        <string name="warn_text_phone">手机号码</string>
        <string name="warn_text_way">告警方式</string>
        <string name="warn_text_ring">铃声</string>
        <string name="warn_text_vibre">振动</string>
        <string name="warn_text_msg">短信</string>
        <string name="setting_text_title">设 置</string>
        <string name="setting_text_warn">告警选项</string>
        <string name="setting_text_mogu">蘑菇伴侣</string>
        <string name="setting_text_password">更改密码</string>
        <string name="setting_text_version">发现新版本</string>
        <string name="setting_text_about">关于</string>
        <string name="setting_text_help">帮助</string>
        <string name="setting_text_offMap">离线地图下载</string>
        <string name="setting_text_exit">登出</string>
</resources>