<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginpage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/register_bg" >
    


    <RelativeLayout 
        android:id="@+id/title_bar"
        android:orientation="vertical"
        android:background="@drawable/title_bar" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView android:layout_centerInParent="true" android:textSize="20.0sp" android:textColor="@color/white"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_text_register" />
    </RelativeLayout>
    

    <LinearLayout    
      android:layout_below="@id/title_bar"
	  android:orientation="vertical" 
	  android:layout_width="fill_parent" 
	  android:layout_height="fill_parent"
	  android:paddingLeft="15dp"
	  android:paddingRight="15dp">
               
	    <LinearLayout 
	        android:orientation="vertical" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="20.0dip"
	        android:layout_marginBottom="20.0dip">       
	      
	        <LinearLayout android:background="@drawable/edittext_yellow" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d"  android:layout_width="80dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_username" />
	            <EditText android:hint="@string/register_hint_username" android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/name" android:background="@android:color/white" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip" android:maxLength="20" android:singleLine="true" />
	        </LinearLayout>
	        
	        <LinearLayout android:layout_marginTop="15dp" android:background="@drawable/edittext_yellow" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d"  android:layout_width="80dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_password" />
	            <EditText android:hint="@string/register_hint_password"  android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/password" android:background="@android:color/white" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip" android:maxLength="20" android:singleLine="true" />
	        </LinearLayout>
	        
	        <LinearLayout android:layout_marginTop="15dp" android:background="@drawable/edittext_yellow" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d"  android:layout_width="80dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_email" />
	            <EditText android:hint="@string/register_hint_email"  android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/email" android:background="@android:color/white" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip" android:maxLength="20" android:singleLine="true" />
	        </LinearLayout>
	        
	        <LinearLayout android:layout_marginTop="15dp" android:background="@drawable/edittext_yellow" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d"  android:layout_width="80dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_phone" />
	            <EditText android:hint="@string/register_hint_phone"  android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/phone" android:background="@android:color/white" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip" android:maxLength="20" android:singleLine="true" />
	        </LinearLayout>
	        
	    </LinearLayout>
	    
	    <RelativeLayout 
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content">   
	         
	        
	        <LinearLayout 
	        android:id="@+id/ll_register"
	        android:layout_alignParentRight="true"
	        android:orientation="vertical" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content">          
	            <Button android:id="@+id/register_btn_ok"  android:textSize="18.0sp" android:textColor="#ffffff"  android:background="@drawable/selector_btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content"   android:text="@string/register_btn_register" />
	            <Button android:id="@+id/register_btn_cancel" android:layout_marginTop="10dp"  android:textSize="18.0sp" android:textColor="#494949"  android:background="@drawable/selector_btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:text="@string/btn_cancel" />
	        </LinearLayout> 
	        
	        
	        <TextView 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:layout_toLeftOf="@id/ll_register"
	            android:textSize="14.0sp" 
	            android:textColor="#3e3f3c" 
	            android:lineSpacingExtra="3dp"
	            android:text="@string/register_tip" />
	   
	      
	     
	   </RelativeLayout>
    
    </LinearLayout> 
  
<!--     <TextView -->
<!--       android:layout_width="wrap_content" -->
<!--       android:layout_height="wrap_content" -->
<!--       android:layout_alignParentBottom="true" -->
<!--       android:layout_centerHorizontal="true" -->
<!--       android:layout_marginBottom="5dp" -->
<!--       android:textColor="#607a84" -->
<!--       android:text="@string/bottom_text" /> -->
    

</RelativeLayout>
